tdf#169590 i18npool: Fix incorrect line breaking in CJK

Since 5a03d511f46ecc05aab35bb29e714b46f5638b1b commit,
ICU line breaking rules are now honored and Asian typography options
for paragraph formats are now ignored.
Respect cases where users apply a list that is different from the
default forbidden character list, or cases where no forbidden character
list is applied.

Change-Id: I7d021c1dcb1e9722eb5f7ae6295b949641dcfe01
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198442
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit b643c5c0ace3af80e2126a05f4df366d4a3166b3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198740
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 02fb87b389f0a4db74b149c790ea1b83af177dd4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199076
Reviewed-by: Saburo Yoshida <sabr0libo@otkr.jp>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>